{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 701,
  "lineage": "b9463d3e-da83-8f01-e768-2fe0f32971be",
  "resources": [
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "k8s_lb_site_voyance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:339713030032:loadbalancer/app/k8s-sitevoya-sitevoya-498512926f/2ce40fe931122758",
            "arn_suffix": "app/k8s-sitevoya-sitevoya-498512926f/2ce40fe931122758",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "k8s-sitevoya-sitevoya-498512926f-738845647.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:339713030032:loadbalancer/app/k8s-sitevoya-sitevoya-498512926f/2ce40fe931122758",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "k8s-sitevoya-sitevoya-498512926f",
            "preserve_host_header": false,
            "security_groups": [
              "sg-056398b5095950832",
              "sg-0ae77eddfa5c26f11"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-077086b3778555822"
              },
              {
                "subnet_id": "subnet-08e2f76c41d058a6f"
              },
              {
                "subnet_id": "subnet-09b839df5b4aa2f43"
              }
            ],
            "subnets": [
              "subnet-077086b3778555822",
              "subnet-08e2f76c41d058a6f",
              "subnet-09b839df5b4aa2f43"
            ],
            "tags": {
              "Environment": "production",
              "Team": "devops",
              "elbv2.k8s.aws/cluster": "cluster_site_voyance",
              "ingress.k8s.aws/resource": "LoadBalancer",
              "ingress.k8s.aws/stack": "site-voyance-prod/site-voyance-prod-back-ingress"
            },
            "vpc_id": "vpc-0843a11b375bef6f5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:339713030032:internet-gateway/igw-044b851b486b5275f",
            "id": "igw-044b851b486b5275f",
            "owner_id": "339713030032",
            "vpc_id": "vpc-0843a11b375bef6f5"
          },
          "dependencies": [
            "aws_vpc.siteVoyance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:339713030032:route-table/rtb-03e63e196f15ed06b",
            "id": "rtb-03e63e196f15ed06b",
            "owner_id": "339713030032",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-044b851b486b5275f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0843a11b375bef6f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.siteVoyance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0756524d3ecffa9be",
            "route_table_id": "rtb-03e63e196f15ed06b",
            "subnet_id": "subnet-09b839df5b4aa2f43"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route_table",
            "aws_subnet.subnet_a",
            "aws_vpc.siteVoyance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090fd181a3188520a",
            "route_table_id": "rtb-03e63e196f15ed06b",
            "subnet_id": "subnet-08e2f76c41d058a6f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route_table",
            "aws_subnet.subnet_b",
            "aws_vpc.siteVoyance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_c_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b13af59b33801cf8",
            "route_table_id": "rtb-03e63e196f15ed06b",
            "subnet_id": "subnet-077086b3778555822"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route_table",
            "aws_subnet.subnet_c",
            "aws_vpc.siteVoyance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:339713030032:security-group/sg-06e3a6d8ef8a076c2",
            "description": "Security group for EKS cluster",
            "egress": [],
            "id": "sg-06e3a6d8ef8a076c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "339713030032",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0843a11b375bef6f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.siteVoyance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:339713030032:subnet/subnet-09b839df5b4aa2f43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b839df5b4aa2f43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713030032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "subnet-a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0843a11b375bef6f5"
          },
          "dependencies": [
            "aws_vpc.siteVoyance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:339713030032:subnet/subnet-08e2f76c41d058a6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e2f76c41d058a6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713030032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "subnet-b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0843a11b375bef6f5"
          },
          "dependencies": [
            "aws_vpc.siteVoyance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:339713030032:subnet/subnet-077086b3778555822",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077086b3778555822",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713030032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "subnet-c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0843a11b375bef6f5"
          },
          "dependencies": [
            "aws_vpc.siteVoyance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "siteVoyance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:339713030032:vpc/vpc-0843a11b375bef6f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a8ce67b070520a45",
            "default_route_table_id": "rtb-05f46ec594536ea8f",
            "default_security_group_id": "sg-0562faeb51aefc541",
            "dhcp_options_id": "dopt-0e7f8b431f7a35ce9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0843a11b375bef6f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05f46ec594536ea8f",
            "owner_id": "339713030032"
          }
        }
      ]
    }
  ]
}